--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "postcss": "8.4.25",
     "react": "18.2.0",
     "react-coolicons": "^3.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "18.2.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^4.10.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
